2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (print_ucs4_terminal): Don't output right
	margin when not needed.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Make color variables global instead of it being per-terminal.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/ls.c (grub_ls_print_devices): Add missing
	asterisk.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Fix powerpc and sparc64 build failures caused by un-nesting memory
	map iterators.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/arc/arcdisk.c (grub_arcdisk_iterate): Fix
	parameter declarations.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsmmap.c: Fix unused variable on emu.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve spkmomdem reliability by adding a separator between bytes.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/partmap/msdos.c (embed_signatures): Add the signature of
	an Acer registration utility with several sightings in the wild.
	Reported by: Rickard Westman.  Fixes Ubuntu bug #987022.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from filesystem directory iterators.

	* include/grub/fs.h (grub_fs_dir_hook_t): New type.
	(struct grub_fs.dir): Add hook_data argument.

	Update all implementations and callers.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Multi-boot manual config): Fix typo for
	"recommended".

2013-01-20  Leif Lindholm  <leif.lindholm@arm.com>

	* util/grub-mkimage.c (main): Postpone freeing arguments.output
	until after its use in generate_image.

2013-01-20  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/loader/i386/linux.c (grub_cmd_initrd): Don't add the
	initrd size to addr_min, since the initrd will be allocated after
	this address.

2013-01-20  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.common: Fix autogen rules to pass definition